[metadata]
name = iotp_orchestrator
version = 2.0.0
summary = IoT Platform Orchestrator
description-file =
    README.md
author = Telefonica I+D
author-email = alvaro.vegagarcia@telefonica.com
home-page = https://github.com/telefonicaid/orchestrator
classifier =
    Environment :: Linux
    License :: Telefonica I+D License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[files]
packages =
    orchestrator

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

# NOTE(dstanek): Uncomment the [pbr] section below and remove the ext.apidoc
# Sphinx extension when https://launchpad.net/bugs/1260495 is fixed.
[pbr]
warnerrors = True

